[gd_scene load_steps=5 format=2]

[ext_resource path="res://stages/interactable/interactable_box.gd" type="Script" id=1]
[ext_resource path="res://stages/interactable/interactable.gd" type="Script" id=2]
[ext_resource path="res://stages/main/Interact.png" type="Texture" id=3]
[ext_resource path="res://base/input_texture.gd" type="Script" id=4]

[node name="InteractableDetection" type="Node2D"]
script = ExtResource( 2 )

[node name="InteractableBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractableBox"]

[node name="InteractLabel" type="Sprite" parent="InteractableBox"]
visible = false
position = Vector2( 45, 18 )
texture = ExtResource( 3 )
script = ExtResource( 4 )
texture_kb_path = "res://stages/main/Interact.png"
texture_ctrl_path = "res://stages/main/Controller-Interact.png"

[node name="AnimationPlayer" type="AnimationPlayer" parent="InteractableBox"]

[node name="LaneDetection" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="LaneCollision" type="CollisionShape2D" parent="LaneDetection"]
